# Well-Regarded

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  ideas.ipynb  main.cpp
conf/: global.conf
include/: configReader.hpp  experiments.hpp  gameHandler.hpp  player.hpp  utilities.hpp
notebooks/: hide_code.tpl  ideas.html  ideas.ipynb
src/: configReader.cpp  experiments.cpp  gameHandler.cpp  player.cpp  utilities.cpp
tests/: CMakeLists.txt  testing.cpp
